--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
-body {
+html, body {
+  height: 100%;
+  font-family: 'Roboto', sans-serif;
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  height: 100%;
+}
+
+div#root {
+  height: 100%;
 }
