--- a/src/components/MarkersList/MarkerList.css
+++ b/src/components/MarkersList/MarkerList.css
@@ -1,9 +1,19 @@
 .marker-list__container {
+  box-shadow: 0px 0px 4px 0px rgba(60, 60, 60, 0.5);
+  border-radius: 3px;
+  margin-top: 4px;
+  height: calc(100% - 16px);
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  padding: 4px;
+  overflow-x: hidden;
+  width: 100%;
+  min-width: 100%;
+  max-width: 100%;
+  background-color: #ffffff;
 }
 
-.marker-list__field {
+.marker-list__marker {
   margin-bottom: 4px;
 }
