--- a/src/components/RouteManager/RouteManager.css
+++ b/src/components/RouteManager/RouteManager.css
@@ -1,23 +1,68 @@
 .route-manager__container {
   display: flex;
-  width: 100%;
-  height: 100%;
+  padding: 20px;
+  width: calc(100% - 40px);
+  height: calc(100% - 40px);
   max-width: 1024px;
-  margin-left: 20px;
-  margin-right: 20px;
+  max-height: 1024px;
   justify-content: space-between;
+  background-color: #ffffff;
+  box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.2)
+}
+
+@media (max-width: 620px) {
+  .route-manager__container {
+    width: calc(100% - 20px);
+    height: calc(100% - 20px);
+    flex-direction: column-reverse;
+    align-items: center;
+    padding: 8px;
+  }
 }
 
 .route-manager__controls {
   display: flex;
-  flex-basis: 50%;
+  flex-basis: 40%;
+  max-width: 40%;
+  width: 100%;
+  margin-right: 16px;
   flex-direction: column;
   justify-content: flex-start;
+  background-color: inherit;
+}
+
+@media (max-width: 620px) {
+  .route-manager__controls {
+    flex-basis: 100%;
+    min-height: 50%;
+    margin-right: 0;
+    max-width: 100%;
+  }
 }
 
 .route-manager__map {
   display: block;
-  width: 50%;
-  min-width: 300px;
+  width: 60%;
   height: 100%;
+}
+
+@media (max-width: 620px) {
+  .route-manager__map {
+    flex-basis: 100%;
+    width: 100%;
+    min-height: 50%;
+  }
+}
+
+.route-manager__map__wrapper {
+  width: 100%;
+  height: 60%;
+}
+
+@media (max-width: 620px) {
+  .route-manager__map__wrapper {
+    height: 100%;
+    padding-top: 4px;
+    padding-bottom: 8px;
+  }
 }
