--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,11 @@
-html, body {
-  height: 100%;
-  font-family: 'Roboto', sans-serif;
+* {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Roboto', sans-serif;
+}
+
+html, body {
   height: 100%;
 }
 
