--- a/src/components/RouteManager/RouteManager.css
+++ b/src/components/RouteManager/RouteManager.css
@@ -7,7 +7,8 @@
   max-height: 1024px;
   justify-content: space-between;
   background-color: #ffffff;
-  box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.2)
+  box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 6px;
 }
 
 @media (max-width: 620px) {
