--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   height: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
-  /* background-color: #f5f9f9; */
+  align-items: start;
+  padding-top: 20px;
   background: linear-gradient(45deg, rgba(63,151,186,1) 0%, rgba(234,83,242,1) 100%);
 }
