--- a/src/components/BaseInput/BaseInput.css
+++ b/src/components/BaseInput/BaseInput.css
@@ -4,5 +4,20 @@
 
 .base-input__input {
   width: 100%;
-  background-color: inherit;
+  padding-left: 4px;
+  border: 1px solid #aaaaaa;
+  background-image: none;
+  background-color: white;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  border-radius: 3px;
+}
+
+.base-input__input:active {
+  box-shadow: 0px 0px 5px 0px rgba(63, 151, 186, 1);
+}
+
+.base-input__input:focus {
+  box-shadow: 0px 0px 5px 0px rgba(63, 151, 186, 1);
 }
