--- a/src/components/MarkerWrapper/MarkerWrapper.css
+++ b/src/components/MarkerWrapper/MarkerWrapper.css
@@ -9,6 +9,8 @@
   height: 24px;
   margin-top: 6px;
   background-color: #ffffff;
+  cursor: pointer;
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2);
 }
 
 .marker-wrapper__name {
