--- a/src/components/MarkersList/MarkerList.css
+++ b/src/components/MarkersList/MarkerList.css
@@ -1,5 +1,5 @@
 .marker-list__container {
-  box-shadow: 0px 0px 4px 0px rgba(60, 60, 60, 0.5);
+  box-shadow: inset 0px 0px 3px 1px rgba(60, 60, 60, 0.3);
   border-radius: 3px;
   margin-top: 8px;
   height: calc(100% - 16px);
